Add messages in registerAndLoginUserSchema, delete empty object in registerController, add documentation for signup, login, logout, refresh routes
